# surfelwarp

./: .gitignore  CMakeLists.txt  cluster_se3.py  how_to_build_run.txt
apps/: CMakeLists.txt
apps/imgproc_app/: main.cpp
apps/imgproc_test/: main.cpp
apps/render_test/: main.cpp
apps/surfelwarp_app/: main.cpp
apps/surfelwarp_kinectdk/: CMakeLists.txt  main.cpp  recorder.cpp  test.cpp
common/: CMakeLists.txt  CameraObservation.h  ConfigParser.cpp  ConfigParser.h  Constants.cpp  Constants.h  TimeLogger.cpp  TimeLogger.h  device_intrinsics.h  global_configs.h  logging.h
core/: CMakeLists.txt  SurfelGeometry.cpp  SurfelGeometry.cu  SurfelWarpSerial.cpp  SurfelWarpSerial.cu  SurfelWarpSerial.h  SurfelWarpSerialDebug.cpp  WarpField.cpp
core/geometry/: AppendSurfelProcessor.cpp  DoubleBufferCompactor.cu  FusionRemainingSurfelMarker.cu  GeometryReinitProcessor.cpp  KNNSearch.cpp  LiveGeometryUpdater.cpp  ReinitRemainingSurfelMarker.cu  SurfelFusionHandler.cpp  SurfelFusionHandler.cu  SurfelFusionHandler.h  VoxelSubsamplerSorting.cu  WarpFieldExtender.cu  append_surfel_collision.cuh
core/render/: GLRenderedMaps.cpp  GLRenderedMaps.h  Renderer.cpp  Renderer.h  RendererDraw.cpp
core/render/shaders/: geometry.vert  solver_map_sized.vert
core/warp_solver/: ApplyJacobianTransposeDot.cu  ApplyJtJMatrixFreeAtomic.cu  ApplyJtJMatrixFreeIndexed.cu  ApplyJtJSanityCheckDirect.cpp  DenseDepthHandlerFreeIndex.cu  DensityForegroundMapHandler.cpp  DensityForegroundMapHandler.cu  JtDotResidualIndexed.cu  JtJMaterializer.cpp  JtJMaterializer.cu  JtJMaterializerNoSync.cu  NodePair2TermsIndex.cu  NodePairRowColumnIndex.cu  PreconditionerBlocked.cu  ResidualEvaluator.cu  RigidSolver.cpp  RigidSolver.cu  SparseCorrespondenceHandler.cpp  SparseCorrespondenceHandler.cu  WarpSolver.cpp  WarpSolver.h  WarpSolverDebug.cpp  WarpSolverInterface.cpp  WarpSolverStreamed.cpp  apply_jt_dot.cuh
hashing/: CMakeLists.txt  CompactCuckooTable.cu  CompactProbeTable.cu  CompactionHashSet.cu  MultiKeyTable.cu  TicketBoardSet.cuh  hash_interface.cu
imgproc/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  ImageProcessorStreamed.cpp
imgproc/correspondence/: CMakeLists.txt  PatchColliderForest.h  PatchColliderRGBCorrespondence.cu  PatchColliderRGBCorrespondence.h  gpc_common.h  gpc_feature.cuh  gpc_feature.h
imgproc/correspondence/doc/: feature-correspondence.md
imgproc/frameio/: AzureKinectDKFetch.cpp  AzureKinectDKFetch.h  FetchInterface.h  GenericFileFetch.cpp  GenericFileFetch.h  VolumeDeformFileFetch.cpp  VolumeDeformFileFetch.h
imgproc/segmentation/: CMakeLists.txt  ForegroundSegmenter.cu  ForegroundSegmenterOffline.cpp  crf_common.h  foreground_permutohedral_deduplicate.cu
math/: CMakeLists.txt  DualQuaternion.hpp  Quaternion.hpp  eigen_device_tranfer.h  eigen_device_transfer.cpp
pcg_solver/: BlockPCG.cuh  CMakeLists.txt  block6x6_pcg_weber.cu  block6x6_pcg_weber.h
test_data/: boxing_config.json  calendar_config.json  hoodie_config.json  kinectdk_config.json  minion_config.json  shirt_config.json  sunflower_config.json  umbrella_config.json  upperbody_config.json  upperbody_config_docker.json  xt_config.json
visualization/: CMakeLists.txt  ImageVisualizer.cpp  PointCloudVisualizer.cpp  VisualizationTransform.cu
