add_subdirectory(surfelwarp_app)
add_subdirectory(compaction_test)
add_subdirectory(crf_test)
add_subdirectory(cublas_test)
add_subdirectory(geometry_test)
add_subdirectory(gpc_test)
add_subdirectory(hash_app)
add_subdirectory(imgproc_app)
add_subdirectory(imgproc_test)
add_subdirectory(render_test)
add_subdirectory(tex1d_test)